--- a/order-master.yml
+++ b/order-master.yml
@@ -11,3 +11,7 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/SpringCloud_Sell?useUnicode=true&allowMultiQueries=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
   jpa:
     show-sql: true
+girl:
+ name: 张三
+ age: 23
+ 
