--- a/product-master.yml
+++ b/product-master.yml
@@ -7,12 +7,11 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
-
+ 
     url: jdbc:mysql://127.0.0.1:3306/SpringCloud_Sell?useUnicode=true&allowMultiQueries=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
   jpa:
     show-sql: true
-eureka:
-  client:
+  rabbitmq:
+    host: 106.54.140.88  
+  
 
-    serviceUrl:
-      defaultZone: http://localhost:8762/eureka/
